# research-simulator-icecream-manufacturing

./: .gitignore  LICENSE  README.md  pyproject.toml  references.md  run.py
docs/: SIMPLIFIED_PIPELINE_REPORT.md  SIMULATOR_CAPABILITIES_AND_SAMPLE_RUN.md
examples/: basic_usage.py  crystallization_parameters_example.json  custom_piml_mixing.py  dashboard.py  generate_dataset.py  literature_presets.py  run_material_batch_cycle.py  sample_run_verbose.py
report/: REPORT_EN.md
skills/: README.md
skills/run-icecream-simulator/: SKILL.md
src/icecream_simulator/: __init__.py  batch_models.py  bioconversion.py  cavitation.py  cip.py  constants.py  crystallization_parameters.py  domain.py  energy_accounting.py  events.py  filtration.py  industrial_chain.py  industrial_physics.py  instrumentation.py  literature_recipes.py  mixer.py  pipeline.py  plant_profile.py  prefiltration.py  production.py  provenance.py  run_full_cycle.py  runner.py  scenario_runner.py  schemas.py  sensors.py
src/icecream_simulator/models/: __init__.py  base.py  placeholders.py
tests/: test_crystallization_parameters.py  test_instrumentation.py  test_literature_recipes.py  test_pipeline.py  test_prefiltration_cavitation.py  test_research_physics.py  test_scenario_runner.py
